fix(web): hide body scrollbar on iOS

--- a/service/vspo-schedule/web/src/styles/globals.css
+++ b/service/vspo-schedule/web/src/styles/globals.css
@@ -4,12 +4,14 @@
   margin: 0;
 }
 
-html {
+html,
+body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  min-height: 100%;
+  position: relative;
 }
 
 a {
